adicionado background color em cada section

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#sports" title="Ir para a seção de esportes">Esportes</a>
+                    <a href="#sports" title="Ir para a seção de esportes" class="sports">Esportes</a>
                 </li>
                 <li>
-                    <a href="#economy" title="Ir para a seção de notícias">Economia</a>
+                    <a href="#economy" title="Ir para a seção de notícias" class="economy">Economia</a>
                 </li>
                 <li>
-                    <a href="#e-sports" title="Ir para a seção de notícias">e-sports</a>
+                    <a href="#e-sports" title="Ir para a seção de notícias" class="e-sports">e-sports</a>
                 </li>
                 <li>
-                    <a href="#tecnology" title="Ir para a seção de notícias">Tecnologia</a>
+                    <a href="#tecnology" title="Ir para a seção de notícias" class="tecnologia">Tecnologia</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section id="sports">
+    <section id="sports" class="sp">
         <h2 class="sports">Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
@@ -74,7 +74,7 @@
             <a href="#sports" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section id="economy">
+    <section id="economy" class="ec">
         <h2 class="economy">Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
@@ -110,7 +110,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section id="e-sports">
+    <section id="e-sports" class="e-sp">
         <h2 class="e-sports">e-sports</h2>
         <article>
             <img src="./imagens/cs2.jpeg" alt="CS2" />
@@ -168,7 +168,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section id="tecnology">
+    <section id="tecnology" class="tec">
         <h2 class="tecnologia">Tecnologia</h2>
         <article>
             <img src="./imagens/vision-pro.jpg" alt="Apple vision pro" />
